--- a/frontendTask/package.json
+++ b/frontendTask/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aframe": "^0.6.1",
+    "aframe-particle-system-component": "^1.0.10",
+    "aframe-react": "^4.3.0",
     "material-ui": "^0.18.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
