--- a/backendTask/server/package.json
+++ b/backendTask/server/package.json
@@ -12,8 +12,13 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.11.10",
     "morgan": "~1.7.0",
     "nodemailer": "^4.1.0",
-    "serve-favicon": "~2.3.2"
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6",
+    "serve-favicon": "~2.3.2",
+    "uuid": "^3.1.0"
   }
 }
